1. horizontal scroll bar coming on page. FIXED 2. Made "click to see new feeds" bold.

--- a/web-app/css/activityfeed.css
+++ b/web-app/css/activityfeed.css
@@ -69,6 +69,8 @@
 
 .activityfeed .activiyfeednewermsg {
 	background-color: #E7F0FE;
+	min-height: 30px;
+	font-size: 20px;
 }
 .userGroup-section .comment-textbox {
 	width:99%;	
